--- a/fr/inc/footer.html
+++ b/fr/inc/footer.html
@@ -7,6 +7,7 @@
         <li><a href="/fr/apropos.html">À propos</a></li>
         <li><a href="/fr/publications.html">Publications</a></li>
         <li><a href="/fr/contact.html">Contact</a></li>
+        <!-- <li><a href="/en/index.html">English</a></li> -->
       </ul>
      
 	</nav>
