--- a/fr/inc/header.html
+++ b/fr/inc/header.html
@@ -14,6 +14,7 @@
         <li><a href="/fr/apropos.html">À propos</a></li>
         <li><a href="/fr/publications.html">Publications</a></li>
         <li><a href="/fr/contact.html">Contact</a></li>
+        <li><a href="/en/index.html">English</a></li>
       </ul>
     </div>
 
@@ -23,6 +24,7 @@
         <li><a href="/fr/apropos.html">À propos</a></li>
         <li><a href="/fr/publications.html">Publications</a></li>
         <li><a href="/fr/contact.html">Contact</a></li>
+        <li><a href="/en/index.html">English</a></li>
       </ul>
       <hr>
     </div>
