--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ Hello i'm Phil Boivin!
       <span></span>
       <span></span>
       <span></span>
-      <ul id="menu-items"></ul>
+      <ul id="menu-items"><li></li></ul>
     </div>
 
     <div id="menuToggleDesk">
-      <ul id="menu-items-desk"></ul>
+      <ul id="menu-items-desk"><li></li></ul>
       <hr>
     </div>
 
@@ -92,7 +92,7 @@ Hello i'm Phil Boivin!
 <script>
   $(function(){
    // $("header").load("/fr/inc/header.html");
-   $("#menu-items").load("/fr/inc/menu.html");
+    $("#menu-items").load("/fr/inc/menu.html");
     $("#menu-items-desk").load("/fr/inc/menu.html");
     $("footer").load("/fr/inc/footer.html");
   });
