--- a/fr/publications.html
+++ b/fr/publications.html
@@ -71,6 +71,12 @@ Hello i'm Phil Boivin!
           <h3>Actualités</h3>
           <ul class="list">
 
+  
+            <li><a href="https://www.lapresse.ca/actualites/2022-02-21/manifestations-contre-les-mesures-sanitaires/des-que-nous-le-pourrons-nous-allons-y-retourner.php">Manifestations contre les mesures sanitaires</a></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/national/2022-02-20/l-occupation-terminee-a-ottawa-des-groupes-se-relocalisent.php">L’occupation terminée à Ottawa, des groupes se relocalisent</a></li>
+
+
             <li><a href="https://www.lapresse.ca/actualites/education/2022-02-10/des-ecoles-larguent-l-institut-confucius.php">Des écoles larguent l’Institut Confucius</a></li>
 
             <li><a href="https://www.lapresse.ca/covid-19/2022-01-13/doublement-infectes-et-vaccines.php">Doublement infectés et vaccinés</a></li>
@@ -97,6 +103,8 @@ Hello i'm Phil Boivin!
 
           <h3>Affaires</h3>
           <ul class="list">
+
+            <li><a href="https://www.lapresse.ca/affaires/entreprises/2022-03-05/la-biere-inclusive.php">La bière inclusive</a></li>
 
             <li><a href="https://www.lapresse.ca/affaires/pme/2021-11-08/univers-pme/le-specialiste-montrealais-du-tapis-d-avion-se-pose-en-alabama.php">Le spécialiste montréalais du tapis d’avion se pose en Alabama</a></li>
 
@@ -142,40 +150,26 @@ Hello i'm Phil Boivin!
           </ul>
 
 
-
-          <h3>Cinéma</h3>
-          <ul class="list">
-
-            <li><a href="https://www.lapresse.ca/cinema/entrevues/2021-11-12/l-arracheuse-de-temps/un-film-fantastique-qui-nous-ressemble.php">« Un film fantastique qui nous ressemble »</a></li>
-
-          </ul>
-
-         
-
-          <h3>Société</h3>
-          <ul class="list">
-
-            <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php">Grossophobie « Le monde nous déteste »</a></li>
-
-          </ul>
-
-
-
           <h3>Gourmand</h3>
           <ul class="list">
+
+            <li><a href="https://www.lapresse.ca/gourmand/chroniques/2022-03-05/l-inculte-du-cafe.php">L’inculte du café</a></li>
 
             <li><a href="https://www.lapresse.ca/gourmand/restaurants/2021-11-21/critique-resto/knuckles-pour-une-restauration-responsable.php">Knuckles : pour une restauration responsable</a></li>
 
             <li><a href="https://www.lapresse.ca/gourmand/restaurants/2021-11-04/le-retour-du-toque.php">Le retour du Toqué !</a></li>
 
             <li><a href="https://www.lapresse.ca/gourmand/restaurants/2021-11-04/buvette-pastek-le-fruit-etait-mur.php">Buvette Pastek : le fruit était mûr !</a></li>
-
-
           </ul>
 
-          
-          <h3>Voyage</h3>
+
+
+          <h3>Autre</h3>
           <ul class="list">
+
+            <li><a href="https://www.lapresse.ca/cinema/entrevues/2021-11-12/l-arracheuse-de-temps/un-film-fantastique-qui-nous-ressemble.php">« Un film fantastique qui nous ressemble »</a></li>
+
+            <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php">Grossophobie « Le monde nous déteste »</a></li>
 
             <li><a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a></li>
 
