--- a/fr/publications.html
+++ b/fr/publications.html
@@ -65,7 +65,7 @@ Hello i'm Phil Boivin!
           <h2>La Presse</h2>
 
            <p>
-            Voir toutes les archives sur <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a>.
+            Voir toutes les archives sur <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a> ou consulter les quelques publications ci-dessous.
           </p>
 
           <h3>Actualités</h3>
