--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ Hello i'm Phil Boivin!
   <meta name="msapplication-TileImage" content="/img/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
-  <script src="/js/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -73,7 +72,7 @@ Hello i'm Phil Boivin!
 
           <h1>Bonjour / Hi</h1> 
           <p>
-          Je suis Philippe. Un photographe de presse montréalais au service des humains (et de certains robots).
+          Je suis Philippe, un photographe de presse montréalais au service des humains (et de certains robots).
           <br>
           Je vous invite à visiter mon <a href="/fr/portfolio.html">portfolio</a> pour découvrir mes photos. (English version is coming soon!)
           </p>
@@ -87,7 +86,7 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-            <li>Je suis collaborateur à <a href="https://www.lapresse.ca">La Presse</a>, consultez mes dernières <a href="/fr/publications.html">publications</a>.</li>
+            <li>Je suis collaborateur à <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a>, consultez mes dernières <a href="/fr/publications.html">publications</a>.</li>
           </ul>
         
         </div>
@@ -129,11 +128,7 @@ Hello i'm Phil Boivin!
    
 </section>
 
-<script> 
-$("body").on("contextmenu", "img", function(e) {
-   return false;
-});
-</script>
+
 </footer>
 </body>
 </html>
