--- a/fr/videos.html
+++ b/fr/videos.html
@@ -11,7 +11,6 @@ Hello i'm Phil Boivin!
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
-  <script src="/js/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -58,7 +57,15 @@ Hello i'm Phil Boivin!
       <div class="col">
 
         <h1>Vidéos</h1>
-        <div id="menu-l2" class="sub-menu"></div>
+        <div id="menu-l2" class="sub-menu">
+          <ul>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="presse.html">Presse</a></li>
+            <li><a href="portraits.html">Portraits</a></li>
+            <li><a href="voyages.html">Voyages</a></li>
+            <li><a href="etc.html">Etc.</a></li>
+          </ul>
+        </div>
         
         <p>
          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/389216283" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
@@ -104,19 +111,8 @@ Hello i'm Phil Boivin!
    
 </section>
 
-<script> 
-$("body").on("contextmenu", "img", function(e) {
-   return false;
-});
-</script>
-</footer>
 
-<!-- Load shared HTML content -->
-<script> 
-  $(function(){
-    $("#menu-l2").load("/fr/inc/menu-l2.html");  
-  });
-</script> 
+</footer>
 
 </body>
 </html>
