--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-            <li>Je suis collaborateur à <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a>, consultez mes dernières <a href="/fr/publications.html">publications</a>.</li>
+            <li>Je suis photographe à <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a>, consultez mes dernières <a href="/fr/publications.html">publications</a>.</li>
           </ul>
         
         </div>
