--- a/index.html
+++ b/index.html
@@ -74,24 +74,24 @@ Hello i'm Phil Boivin!
           <p>
           Je suis Philippe, un photographe de presse montréalais au service des humains (et de certains robots).
           <br>
-          Je vous invite à visiter mon <a href="/fr/portfolio.html">portfolio</a> pour découvrir mes photos. (English version is coming soon!)
+          Je vous invite à visiter mon <a href="/fr/portfolio.html">portfolio</a> pour découvrir mes photos ou le site de <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a> pour consulter mes dernières publications.
           </p>
      
         </div>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col">
 
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-            <li>Je suis photographe à <a href="https://www.lapresse.ca/recherche?q=%22Photo+Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Photo%20Philippe%20Boivin%22&gsc.sort=date">La Presse</a>, consultez mes dernières <a href="/fr/publications.html">publications</a>.</li>
+            <li></li>
           </ul>
         
         </div>
       </div>
-
+ -->
     </div>
   </main>
   
