--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -55,9 +55,9 @@ Hello i'm Phil Boivin!
 
     <div class="row">
 
-      <div class="col-slim">
+     <!--  <div class="col-slim">
         <img class="portrait" src="/img/PhilippeBoivin.png" alt="Philippe Boivin">
-      </div>
+      </div> -->
 
       <div class="col">
 
