--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -8,7 +8,7 @@ Hello i'm Phil Boivin!
   <meta charset="utf-8">
   <title>À propos | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
+  <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -23,7 +23,7 @@ Hello i'm Phil Boivin!
     <nav id="main-menu">
 
       <div id="menuToggle">
-        <input type="checkbox" />
+        <input type="checkbox">
         <span></span>
         <span></span>
         <span></span>
@@ -51,7 +51,7 @@ Hello i'm Phil Boivin!
 </header>
 
   <main>
-    <div id="content">
+    <section id="content">
 
     <div class="row">
 
@@ -82,7 +82,7 @@ Hello i'm Phil Boivin!
     </div>
 
 
-  </div> 
+  </section> 
 </main>
   
 <footer>
@@ -113,7 +113,7 @@ Hello i'm Phil Boivin!
     </div>
 
     <div class="copy">
-    &copy Philippe Boivin
+    &copy; Philippe Boivin
     </div>
    
 </section>
