--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -16,7 +16,7 @@ Hello i'm Phil Boivin!
 <body>
 
 <header>
-  <section id="header-content">
+  <div id="header-content">
      
     <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
 
@@ -47,11 +47,11 @@ Hello i'm Phil Boivin!
 
     </nav>
 
-  </section>
+  </div>
 </header>
 
   <main>
-    <section id="content">
+    <div id="content">
 
     <div class="row">
 
@@ -82,11 +82,11 @@ Hello i'm Phil Boivin!
     </div>
 
 
-  </section> 
+  </div> 
 </main>
   
 <footer>
-<section id="footer-content">
+<div id="footer-content">
    
    	<nav>
 
@@ -116,7 +116,7 @@ Hello i'm Phil Boivin!
     &copy; Philippe Boivin
     </div>
    
-</section>
+</div>
 </footer>
 </body>
 </html>
