Update (test) to improve Page Speed

--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Hello i'm Phil Boivin! 
+Hello i'm Phil Boivin! I want to make the web more accessible and efficient!
 -->
 <html lang="en">
 
@@ -22,24 +22,11 @@ Hello i'm Phil Boivin!
 
     <nav id="main-menu">
 
-      <div id="menuToggle">
-        <input type="checkbox">
-        <span></span>
-        <span></span>
-        <span></span>
-        <ul id="menu-items">
-          <li><a href="/fr/photos.html">Photos</a></li>
-          <li><a href="/fr/apropos.html">À propos</a></li>
-          <li><a href="/fr/publications.html">Publications</a></li>
-          <li><a href="/fr/contact.html">Contact</a></li>
-        </ul>
-      </div>
 
       <div id="menuToggleDesk">
         <ul id="menu-items-desk">
           <li><a href="/fr/photos.html">Photos</a></li>
           <li><a href="/fr/apropos.html">À propos</a></li>
-          <li><a href="/fr/publications.html">Publications</a></li>
           <li><a href="/fr/contact.html">Contact</a></li>
         </ul>
         <hr>
@@ -64,15 +51,11 @@ Hello i'm Phil Boivin!
         <h1>À propos</h1>
 
         <p>
-        Philippe Boivin est un photographe et pilote de drone pratiquant à Montréal. Il explore l’imagerie numérique depuis le début des années 2000. À travers ses objectifs, il préconise une approche constructive et créative afin de créer des images éloquentes et authentiques. 
-        </p>
-        
-        <p>
-        Créatif, rigoureux et très curieux, il est constamment à la recherche de nouveaux projets éditoriaux ou reliés à l'actualité.
+        Philippe Boivin est un consultant web sénior dans la région de Montréal. Il est passionné par le code efficace, l'organisation de l'information, l'optimisation et tout ce qui rend le web plus beau et accessible.
         </p>
 
         <p>
-        Philippe est titulaire d’un diplôme en photographie de l’Université Concordia de Montréal et possède une certification avancée comme pilote de drone au Canada.
+        Philippe est aussi un photographe, titulaire d'un diplôme en photographie de l’Université Concordia de Montréal et pilote de drone avec certification avancée au Canada.
         </p>
 
         <a href="contact.html">Contactez</a> Philippe pour en savoir plus.
@@ -93,9 +76,8 @@ Hello i'm Phil Boivin!
       <ul id="footer-menu">
         <li><a href="/fr/photos.html">Photos</a></li>
         <li><a href="/fr/apropos.html">À propos</a></li>
-        <li><a href="/fr/publications.html">Publications</a></li>
         <li><a href="/fr/contact.html">Contact</a></li>
-        <!-- <li><a href="/en/index.html">English</a></li> -->
+        <li><a href="/en/index.html">English</a></li>
       </ul>
      
 	</nav>
