--- a/fr/contact.html
+++ b/fr/contact.html
@@ -24,7 +24,7 @@ Hello i'm Phil Boivin!
 
     <nav id="main-menu">
 
-      <div id="menuToggle">
+     <!--  <div id="menuToggle">
         <input type="checkbox" />
         <span></span>
         <span></span>
@@ -35,7 +35,7 @@ Hello i'm Phil Boivin!
           <li><a href="/fr/publications.html">Publications</a></li>
           <li><a href="/fr/contact.html">Contact</a></li>
         </ul>
-      </div>
+      </div> -->
 
       <div id="menuToggleDesk">
         <ul id="menu-items-desk">
