--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -20,19 +20,17 @@ Hello i'm Phil Boivin! I want to make the web more accessible and efficient!
      
     <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
 
-    <nav id="main-menu">
+    <nav id="main-menu" role="navigation" aria-label="Main menu">
+        <div id="menu">
+          <ul>
+            <li><a href="/fr/apropos.html">À propos</a></li>
+            <li><a href="/fr/photos.html">Photos</a></li>
+            <li><a href="/fr/contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
 
-
-      <div id="menuToggleDesk">
-        <ul id="menu-items-desk">
-          <li><a href="/fr/photos.html">Photos</a></li>
-          <li><a href="/fr/apropos.html">À propos</a></li>
-          <li><a href="/fr/contact.html">Contact</a></li>
-        </ul>
-        <hr>
-      </div>
-
-    </nav>
+      <hr>
 
   </div>
 </header>
