--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ Hello i'm Phil Boivin!
       <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
 
       <nav id="main-menu" role="navigation" aria-label="Main menu">
-        <div id="menuToggleDesk">
-          <ul id="menu-items-desk">
+        <div id="menu">
+          <ul>
             <li><a href="/fr/apropos.html">À propos</a></li>
             <li><a href="/fr/photos.html">Photos</a></li>
             <li><a href="/fr/contact.html">Contact</a></li>
@@ -56,7 +56,7 @@ Hello i'm Phil Boivin!
         <div class="col">
 
           <h1>
-          Premier titre H1
+          Maintenance
           </h1>
 
           <p>
