--- a/fr/contact.html
+++ b/fr/contact.html
@@ -22,32 +22,17 @@ Hello i'm Phil Boivin!
      
     <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
 
-    <nav id="main-menu">
+     <nav id="main-menu" role="navigation" aria-label="Main menu">
+        <div id="menu">
+          <ul>
+            <li><a href="/fr/apropos.html">À propos</a></li>
+            <li><a href="/fr/photos.html">Photos</a></li>
+            <li><a href="/fr/contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
 
-     <!--  <div id="menuToggle">
-        <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span>
-        <ul id="menu-items">
-          <li><a href="/fr/photos.html">Photos</a></li>
-          <li><a href="/fr/apropos.html">À propos</a></li>
-          <li><a href="/fr/publications.html">Publications</a></li>
-          <li><a href="/fr/contact.html">Contact</a></li>
-        </ul>
-      </div> -->
-
-      <div id="menuToggleDesk">
-        <ul id="menu-items-desk">
-          <li><a href="/fr/photos.html">Photos</a></li>
-          <li><a href="/fr/apropos.html">À propos</a></li>
-          <li><a href="/fr/publications.html">Publications</a></li>
-          <li><a href="/fr/contact.html">Contact</a></li>
-        </ul>
-        <hr>
-      </div>
-
-    </nav>
+      <hr>
 
   </section>
 </header>
@@ -97,9 +82,8 @@ Hello i'm Phil Boivin!
    	<nav>
 
       <ul id="footer-menu">
-        <li><a href="/fr/photos.html">Photos</a></li>
         <li><a href="/fr/apropos.html">À propos</a></li>
-        <li><a href="/fr/publications.html">Publications</a></li>
+        <li><a href="/fr/photos.html">Photos</a></li>
         <li><a href="/fr/contact.html">Contact</a></li>
         <!-- <li><a href="/en/index.html">English</a></li> -->
       </ul>
