--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <!--
 Hello i'm Phil Boivin! 
 -->
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
   <title>Philippe Boivin</title>
+  <meta name="description" content="Site officiel de Philippe Boivin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="/img/icon.png">
