Update icons manifest

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -122,6 +122,7 @@ var ip;
     $.getJSON("https://api.ipify.org?format=jsonp&callback=?",
       function(json) {
         ip = json.ip;
+        console.log(ip);
       }
     );
   });
