--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ Hello i'm Phil Boivin!
         <div class="col">
 
           <h1>
-          Maintenance
+          Site en construction
           </h1>
 
           <p>
-          Pour tester seulement! Revenez plus tard...
+          Revenez plus tard...
           </p>
      
         </div>
