--- a/dev/qa/crawl2/index.html
+++ b/dev/qa/crawl2/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>QA Crawler 2</h1>
     <div id="tableContainer"></div>
-    <script src="lib2.js"></script>
+    <script src="lib.js"></script>
   </body>
 </html> 
