--- a/dev/qa/crawl2/index.html
+++ b/dev/qa/crawl2/index.html
@@ -7,5 +7,10 @@
     <h1>QA Crawler 2</h1>
     <div id="tableContainer"></div>
     <script src="lib.js"></script>
+    <script>
+
+    getLinks("https://www.philboivin.com/fr/photos.html");
+
+    </script>
   </body>
 </html> 
