--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -49,11 +49,11 @@ Hello i'm Phil Boivin! I want to make the web more accessible and efficient!
         <h1>À propos</h1>
 
         <p>
-        Philippe Boivin est un consultant web sénior dans la région de Montréal. Il est passionné par le code efficace, l'organisation de l'information, l'optimisation et tout ce qui rend le web plus beau et accessible.
+        Philippe Boivin est un professionnel dans l'univers du développement web. Il est passionné par l'organisation de l'information, par le code efficace et par l'optimisation et tout ce qui rend Internet plus beau et accessible.
         </p>
 
         <p>
-        Philippe est aussi un photographe, titulaire d'un diplôme en photographie de l’Université Concordia de Montréal et pilote de drone avec certification avancée au Canada.
+        Philippe est aussi un photographe à la retraite, titulaire d'un diplôme en photographie de l’Université Concordia de Montréal et pilote de drone avec certification avancée au Canada.
         </p>
 
         <a href="contact.html">Contactez</a> Philippe pour en savoir plus.
