--- a/dev/index.html
+++ b/dev/index.html
@@ -112,10 +112,9 @@ Hello i'm Phil Boivin!
                 Test site.
               </li>
               <li>
-                <a href="/dev/HTMLOven/">HTML Oven</a> Small POC for a quick
+                <a href="/dev/HTMLOven/">HTML Oven</a> Tiny POC for a quick
                 static local html generator.
               </li>
-              <li><a href="/dev/qa/ping">Ping</a> Tiny local ping app.</li>
             </ul>
           </div>
         </div>
