--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -45,16 +45,19 @@ Hello i'm Phil Boivin! I want to make the web more accessible and efficient!
             <h1>À propos</h1>
 
             <p>
-              Philippe Boivin est un professionnel dans l'univers du
-              développement web. Il est passionné par l'organisation de
-              l'information, par le code efficace et par l'optimisation et tout
-              ce qui rend Internet plus beau et accessible. Philippe est aussi
-              un photographe à la retraite, titulaire d'un diplôme en
-              photographie de l’Université Concordia de Montréal et pilote de
+              Je suis passionné par le web et par l'organisation de
+              l'information de façon clair et efficace. J'adore le code et tout
+              ce qui rend Internet plus beau et accessible.
+            </p>
+            <p>
+              Je suis aussi photographe à la retraite, titulaire d'un diplôme en
+              photographie de l'Université Concordia de Montréal et pilote de
               drone avec certification avancée au Canada.
             </p>
 
-            <a href="contact.html">Contactez</a> Philippe pour en savoir plus.
+            <a href="contact.html">Contactez-moi</a> pour en savoir plus ou
+            visitez mon profile
+            <a href="https://www.linkedin.com/in/philboivin/">LinkedIn</a>.
           </div>
         </div>
       </div>
