--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -37,17 +37,21 @@ Hello i'm Phil Boivin! I want to make the web more accessible and efficient!
     <main>
       <div id="content">
         <div class="row">
-          <!--  <div class="col-slim">
-        <img class="portrait" src="/img/PhilippeBoivin.png" alt="Philippe Boivin">
-      </div> -->
+          <div class="col-slim">
+            <img
+              class="portrait"
+              src="/img/philboivin.png"
+              alt="Philippe Boivin"
+            />
+          </div>
 
           <div class="col">
             <h1>À propos</h1>
 
             <p>
               Je suis passionné par le web et par l'organisation de
-              l'information de façon clair et efficace. J'adore le code et tout
-              ce qui rend Internet plus beau et accessible.
+              l'information de façon claire et efficace. J'adore le code
+              performant et tout ce qui rend Internet plus beau et accessible.
             </p>
             <p>
               Je suis aussi photographe à la retraite, titulaire d'un diplôme en
