--- a/fr/projets.html
+++ b/fr/projets.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Philippe Boivin</title>
-    <meta name="description" content="Terrain de jeux virtuel de Philippe Boivin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg">
     <link rel="icon" type="image/png" href="/img/icon.png">
@@ -32,13 +31,13 @@
       <div id="content">
         <div class="row">
           <div class="col">
+            <h1>Projets</h1>
 
-              <h1>À propos</h1>
-
-              <p>
-                Animé par une passion pour le web, la technologie et les machines électroniques, 
-                j'oeuvre à rendre les choses plus simples, efficaces et accessibles.
-              </p>
+            <p>
+             <ul>
+                <li><a href="/fr/photos.html">Photos</a></li>
+             </ul>
+            </p>
         
           </div>
         </div>
