--- a/404.html
+++ b/404.html
@@ -44,11 +44,10 @@
 
 
     <footer>
-      <section id="footer-content">
-        <hr>
-        
-        <div class="copy">&copy Philippe Boivin.</div>
-      </section>
+      <div id="footer-content">
+        <hr>  
+        <div class="copy">&copy; Philippe Boivin.</div>
+      </div>
     </footer>
 
 
