--- a/fr/presse.html
+++ b/fr/presse.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Photos de presse | Philippe Boivin</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta
       property="og:image"
-      content="https://www.philboivin.com/img/philboivin-og.jpg"
-    />
-    <link rel="icon" type="image/png" href="/img/icon.png" />
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+      content="https://www.philboivin.com/img/philboivin-og.jpg"><link rel="icon" type="image/png" href="/img/icon.png">
+<link href="/css/style.css" rel="stylesheet" type="text/css">
     <script src="/js/jquery/3.5.1/jquery.min.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/css/nanogallery2.min.css"
       rel="stylesheet"
       type="text/css"
-    />
+    >
   </head>
 
   <body>
@@ -64,10 +62,10 @@
     </main>
 
     <footer>
-      <section id="footer-content">
+      <div id="footer-content">
         <hr>
-        <div class="copy">&copy Philippe Boivin.</div>
-      </section>
+        <div class="copy">&copy; Philippe Boivin.</div>
+      </div>
     </footer>
 
     <!-- Load shared HTML content -->
