--- a/fr/videos.html
+++ b/fr/videos.html
@@ -59,7 +59,7 @@
 <footer>
   <section id="footer-content">
     <hr>
-    <div class="copy">&copy Philippe Boivin.</div>
+    <div class="copy">&copy; Philippe Boivin.</div>
   </section>
 </footer>
 
