--- a/fr/etc.html
+++ b/fr/etc.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Et cetera | Philippe Boivin</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta
       property="og:image"
-      content="https://www.philboivin.com/img/philboivin-og.jpg"
-    />
-    <link rel="icon" type="image/png" href="/img/icon.png" />
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+      content="https://www.philboivin.com/img/philboivin-og.jpg"><link rel="icon" type="image/png" href="/img/icon.png">
+<link href="/css/style.css" rel="stylesheet" type="text/css">
     <script src="/js/jquery/3.5.1/jquery.min.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/css/nanogallery2.min.css"
       rel="stylesheet"
       type="text/css"
-    />
+    >
   </head>
 
   <body>
@@ -92,15 +90,15 @@
           L46.7070007,34.2929993z"/><path d="M32,0c-17.6730995,0-32,14.3268995-32,32s14.3268995,32,32,32c17.6731987,0,32-14.3269005,32-32S49.6731987,0,32,0z M32,2
           c16.542099,0,30,13.4580002,30,30c0,16.542099-13.457901,30-30,30s-30-13.457901-30-30C2.0000007,15.4580002,15.4579,2,32,2z"/></svg></a></div>
         </div>
-        
+
       </div>
     </main>
 
     <footer>
-      <section id="footer-content">
+      <div id="footer-content">
         <hr>
-        <div class="copy">&copy Philippe Boivin.</div>
-      </section>
+        <div class="copy">&copy; Philippe Boivin.</div>
+      </div>
     </footer>
 
     <!-- Load shared HTML content -->
