--- a/fr/etc.html
+++ b/fr/etc.html
@@ -40,9 +40,9 @@
           <div class="col">
             <h1>Etc.</h1>
             <div id="menu-l2" class="sub-menu"></div>
-            <p>Articles, projets et autres histoires...</p>
+            <p>Projets et autres histoires...</p>
 
-            <div id="menu-l2" class="sub-menu">
+            <div class="sub-menu">
               <ul>
                 <li><a href="#pub">Publicités</a></li>
                 <li><a href="#event">Événements</a></li>
@@ -51,17 +51,6 @@
               </ul>
             </div>
 
-            <ul class="list top-spacer">
-              <li><a href="articles/2021-09-22-delices-des-dunes.html">Épicerie Délices des Dunes</a></li>
-              <li><a href="articles/2021-08-07-nettoyage.html">Nettoyage au Parc de la Promenade-Bellerive</a></li>
-              <li><a href="articles/2021-07-01-cerises.html">Cerises du Plateau</a></li>
-              <li><a href="articles/2021-03-22-mab.html">Mâle Alpha Barbier</a></li>
-              <li><a href="articles/2020-12-05-surf-montreal.html">Surfer en hiver à Montréal</a></li>
-              <li><a href="articles/cirque-du-soleil.html">Lumière sur... le Cirque du Soleil</a></li>
-              <li><a href="articles/les-visages-du-taxi.html">Les visages du taxi</a></li>
-              <li><a href="articles/flashback.html">Flashback</a></li>
-              <li><a href="articles/mobile.html">Mobile</a></li>
-            </ul>
           </div>
         </div>
 
@@ -88,7 +77,7 @@
 
         <div class="topLink"><a href="#top"><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="40"><title>Retour en haut</title><path d="M46.7070007,34.2929993c0.3906975,0.3906021,0.3906975,1.0233994,0,1.4140015 c-0.3906021,0.3906975-1.0233955,0.3906975-1.4140015,0L32,22.4141006L18.7070007,35.7070007 c-0.3906002,0.3906975-1.0233955,0.3906975-1.4139996,0C17.0977001,35.5116997,17,35.2559013,17,35 c0-0.2557983,0.0977001-0.5116997,0.2930012-0.7070007l13.9999981-14c0.3906059-0.3906002,1.0233994-0.3906002,1.4140015,0
           L46.7070007,34.2929993z"/><path d="M32,0c-17.6730995,0-32,14.3268995-32,32s14.3268995,32,32,32c17.6731987,0,32-14.3269005,32-32S49.6731987,0,32,0z M32,2
-          c16.542099,0,30,13.4580002,30,30c0,16.542099-13.457901,30-30,30s-30-13.457901-30-30C2.0000007,15.4580002,15.4579,2,32,2z"/></svg></a></div>
+          c16.542099,0,30,13.4580002,30,30c0,16.542099-13.457901,30-30,30s-30-13.457901-30-30C2.0000007,15.4580002,15.4579,2,32,2z"/></svg></a>
         </div>
 
       </div>
