--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
     <title>404 - Philippe Boivin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg">
-    <link rel="icon" type="image/png" href="/img/icon.png" />
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="/img/icon.png">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <header>
-      <section id="header-content">
+      <div id="header-content">
         <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
 
         <nav id="main-menu" aria-label="Main menu">
@@ -24,7 +24,7 @@
           </div>
         </nav>
         <hr>
-      </section>
+      </div>
     </header>
 
     <main>
