--- a/fr/videos.html
+++ b/fr/videos.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Vidéos | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
+  <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -45,9 +45,7 @@
           </ul>
         </div>
         
-        <p>
-         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/389216283" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-        </p>
+         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/389216283" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
       </div>
     </div>
@@ -57,10 +55,10 @@
 </main>
   
 <footer>
-  <section id="footer-content">
+  <div id="footer-content">
     <hr>
     <div class="copy">&copy; Philippe Boivin.</div>
-  </section>
+  </div>
 </footer>
 
 </body>
