--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div id="header-content">
-        <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
+        <div class="logo">Philippe Boivin</div>
 
         <nav id="main-menu" aria-label="Main menu">
           <div id="menu">
