--- a/fr/projets.html
+++ b/fr/projets.html
@@ -34,6 +34,7 @@
             <h1>Projets</h1>
 
              <ul>
+                <li><a href="https://github.com/philboiv1n">Développement et programmation</a></li>
                 <li><a href="/fr/photos.html">Photos</a></li>
              </ul>
       
