New project and CSS adjustments.

--- a/fr/projets.html
+++ b/fr/projets.html
@@ -34,10 +34,24 @@
             <h1>Projets</h1>
 
              <ul>
-                <li><a href="https://github.com/philboiv1n">Github</a> - Développement et programmation logiciels.</li>
-                <li><a href="/fr/photos.html">Photos</a></li>
+                <li>
+                  <a href="https://github.com/philboiv1n">Github</a> - Développement et programmation logiciels.
+                  <ul>
+                    <li><a href="/mf">Mystic Flight</a> : Jeu rétro en AssemblyScript et compilé en WebAssembly via WASM-4.</li>
+                  </ul>  
+                </li>
+                <!-- <li><a href="/fr/photos.html">Photos</a></li> -->
              </ul>
       
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col">
+             <h2>Archives</h2>
+             <ul>
+              <li><a href="/fr/photos.html">Photos</a></li>
+             </ul>
           </div>
         </div>
       </div>
