--- a/mf/index.html
+++ b/mf/index.html
@@ -36,8 +36,8 @@
               <h1>Mystical Flight</h1>
 
               <p>
-               A simple game written in AssemblyScript for the <a href="https://wasm4.org">WASM-4</a> fantasy console.
-               I'm using this project to learn more about Web Assembly.
+               A simple game written in <a href="https://www.assemblyscript.org/">AssemblyScript</a> for the <a href="https://wasm4.org">WASM-4</a> fantasy console.
+               I'm using this project to learn more about basic video game patterns and <a href="https://webassembly.org/">WebAssembly</a>.
               </p>
               <p>
                 More information coming soon!
