Update to MF (name)

--- a/mf/index.html
+++ b/mf/index.html
@@ -2,8 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>Mystical Flight - Philippe Boivin</title>
-    <meta name="description" content="Terrain de jeux virtuel de Philippe Boivin">
+    <title>Mystic Flight - Philippe Boivin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg">
     <link rel="icon" type="image/png" href="/img/icon.png">
@@ -33,7 +32,7 @@
         <div class="row">
           <div class="col">
 
-              <h1>Mystical Flight</h1>
+              <h1>Mystic Flight</h1>
 
               <p>
                A simple game written in <a href="https://www.assemblyscript.org/">AssemblyScript</a> for the <a href="https://wasm4.org">WASM-4</a> fantasy console.
