--- a/mf/index.html
+++ b/mf/index.html
@@ -39,7 +39,7 @@
                I'm using this project to learn more about basic video game patterns and <a href="https://webassembly.org/">WebAssembly</a>.
               </p>
               <p>
-                More information coming soon!
+                <a href="mystic-flight-v0-8-9.html">Try the beta version 0.8.9</a>
               </p>
         
           </div>
