Update to css + mf

--- a/mf/index.html
+++ b/mf/index.html
@@ -38,8 +38,10 @@
                A simple game written in <a href="https://www.assemblyscript.org/">AssemblyScript</a> for the <a href="https://wasm4.org">WASM-4</a> fantasy console.
                I'm using this project to learn more about basic video game patterns and <a href="https://webassembly.org/">WebAssembly</a>.
               </p>
+              <br>
               <p>
-                <a href="mystic-flight-v0-8-9.html">Try the beta version 0.8.9</a>
+                <h2>Play</h2>
+              ➤ <a href="mystic-flight-v0-8-9.html">HTML version 0.8.9</a>
               </p>
         
           </div>
