--- a/fr/projets.html
+++ b/fr/projets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg">
     <link rel="icon" type="image/png" href="/img/icon.png">
-    <link href="/css/style.css?a=1" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
