--- a/mf/index.html
+++ b/mf/index.html
@@ -44,6 +44,12 @@
               ➤ <a href="mystic-flight-v0-19-0.html">HTML version 0.19.0</a>
               </p>
         
+              <br>
+              <h2>Hint</h2>
+              <p>
+              For hardcore mode, press X 10 times in the title screen.
+              </p>
+        
           </div>
         </div>
       </div>
