--- a/fr/projets.html
+++ b/fr/projets.html
@@ -33,6 +33,7 @@
           <div class="col">
             <h1>Projets</h1>
              <ul>
+                <li>Zozo : Jeu rétro développé avec Lua et compilé via TIC-80 - en construction.</li>
                 <li><a href="/mf">Mystic Flight</a> : Jeu rétro en AssemblyScript et compilé en WebAssembly via WASM-4.</li>
                 <li><a href="https://lifeapi-client.philboivin.com/">LifeAPI</a> : API prototype en développement (C# + React).</li>
                 <li><a href="https://github.com/philboiv1n">Github</a> : Autres projets en programmation logiciels.</li>
