--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -18,17 +18,7 @@
   <body>
     <header>
       <div id="header-content">
-        <div class="logo">Philippe Boivin</div>
-
-        <nav id="main-menu" aria-label="Main menu">
-          <div id="menu">
-            <ul>
-              <li><a href="/">Accueil</a></li>
-              <li><a href="/fr/projets.html">Projets</a></li>
-              <li><a href="/fr/contact.html">Contact</a></li>
-            </ul>
-          </div>
-        </nav>
+        <div class="logo"><a href="/">Philippe Boivin</a></div>
         <hr>
       </div>
     </header>
