--- a/fr/videos.html
+++ b/fr/videos.html
@@ -13,17 +13,7 @@
 
   <header>
     <div id="header-content">
-      <div class="logo">Philippe Boivin</div>
-
-      <nav id="main-menu" aria-label="Main menu">
-        <div id="menu">
-          <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/fr/projets.html">Projets</a></li>
-            <li><a href="/fr/contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
+      <div class="logo"><a href="/">Philippe Boivin</a></div>
       <hr>
     </div>
   </header>
