--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <h1>À propos</h1>
               <p>
                 Chargé de projets TI situé à Montréal (Québec) au Canada.
-                j'oeuvre à rendre les choses plus simples, efficaces et accessibles.
+                J'oeuvre à rendre les choses plus simples, efficaces et accessibles.
               </p>
           </div>
         </div>
