New project : CHIP-8 Emulator.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="col">
               <h1>Projets</h1>
                <ul>
+                  <li><a href="https://github.com/philboiv1n/chip-8-python">Chip-8 Emulator</a> : Emulateur de base en Python (Docker) </li>
                   <li><a href="/mf">Mystic Flight</a> : Jeu rétro en AssemblyScript et compilé en WebAssembly via WASM-4.</li>
                   <li><a href="https://github.com/philboiv1n">Github</a> : Autres projets en programmation logiciels.</li>
                   <li><a href="/fr/photos.html">Photos</a> : Archives.</li>
