--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
               <h1>Projets</h1>
                <ul>
                   <li><a href="https://myetl.philboivin.com">MyETL</a> : A simple, no-build, no-fuss data pipeline.</li>
-                  <li><a href="https://github.com/philboiv1n/chip-8-python">Chip-8 Emulator</a> : Emulateur de base en Python (Docker)</li>
+                  <li><a href="https://github.com/philboiv1n/chip-8-python">Chip-8 Emulator</a> : Emulateur de base en Python + Docker.</li>
+                  <li><a href="https://github.com/philboiv1n/django-poker">Django Poker</a> : Poker multijoueur en Python + Docker.</li>
                   <li><a href="/mf">Mystic Flight</a> : Jeu rétro en AssemblyScript et compilé en WebAssembly via WASM-4.</li>
                   <li><a href="https://github.com/philboiv1n">Github</a> : Autres projets en programmation logiciels.</li>
                   <li><a href="/fr/photos.html">Photos</a> : Archives.</li>
