--- a/clock/index.html
+++ b/clock/index.html
@@ -2,18 +2,25 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Clock</title>
+  <title>Clock - Philippe Boivin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       height: 100%;
       margin: 0;
-      font-family: sans-serif;
-      background-color: #000;
+      padding: 0;
+      background: #000;
       color: #0f0;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 64px;
+    }
+
+    #clock {
+      font-family: sans-serif;
+      font-size: 20vw;
+      text-align: center;
+      line-height: 1;
     }
   </style>
 </head>
